cluster/apps/invidious/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: invidious
    app.kubernetes.io/version: 2025.12.22-9603f51
  name: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: invidious
  template:
    metadata:
      labels:
        app.kubernetes.io/name: invidious
        app.kubernetes.io/version: 2025.12.22-9603f51
    spec:
      containers:
      - image: quay.io/invidious/invidious:2025.12.22-9603f51
        name: invidious
        ports:
        - containerPort: 3000
          name: invidious
      - image: quay.io/invidious/invidious-companion:latest
        name: invidious-companion
        volumeMounts:
        - mountPath: /var/tmp/youtubei.js
          name: cache-pvc-volume
      volumes:
      - name: cache-pvc-volume
        persistentVolumeClaim:
          claimName: cache-pvc
