cluster/apps/invidious/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: invidious
    app.kubernetes.io/version: 2025.12.22-9603f51
  name: invidious
spec:
  selector:
    app.kubernetes.io/name: invidious
  ports:
  - name: http-invidious
    port: 80
    targetport: 80
